spacing correction

--- a/fiction-home.css
+++ b/fiction-home.css
@@ -66,7 +66,7 @@ html {
 /* nav styles */
 
 header {
-  width: 100vw;
+  width: 100%;
   position: fixed;
   z-index:7;
   height:40px;
@@ -76,7 +76,6 @@ header {
   overflow: hidden;
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   padding-top: 15px;
-  padding-left: 7px;
   text-align: center;
   
   
@@ -98,7 +97,7 @@ header {
 }
 .navbar {
 display: flex;
-justify-content: space-between;
+justify-content: space-evenly;
 /* padding-right: 1rem; */
 align-content: center;
 max-width: 825px;
@@ -290,8 +289,8 @@ z-index: 201;
     margin: auto;
     text-align:center;
     
-    /* grid-template-columns: repeat(10, 1fr); */
-    grid-template-columns: repeat(10, 4.7rem);
+    grid-template-columns: repeat(11, 1fr);
+    /* grid-template-columns: repeat(10, 4.7rem); */
     /* grid-auto-rows: minmax(100px, auto); */
     grid-template-rows: 4rem 2rem 16rem 3rem 6rem 2rem;
     grid-template-areas: 
@@ -309,6 +308,8 @@ z-index: 201;
     background-color:white;
     overflow:hidden;
     text-align:center;
+    justify-content: space-around;
+
 }
 
 
